fixed html and css

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 			<!-- ==== Notify Section ==== -->
 			<div class="notify-after text-center">						
 				<h2>Notify Me</h2>
-				<p>Subscribe to our mailing list for the latest updates!</p>
+				<h5>Subscribe to our mailing list for the latest updates!</h5>
 				<form id="mc-form" class="form-inline" role="form">
 					<div class="form-group subscribe-form">							  							  
 						<input id="mc-email" type="email" placeholder="Your email" class="form-control input-label input-notify-after">
